k3s/apps/hedgedoc/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - name: hedgedoc
          image: hedgedoc
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 120
          readinessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 30
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
