k3s/apps/hedgedoc/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
spec:
  type: ClusterIP
  selector:
    app: hedgedoc
  ports:
    - name: http
      port: 3000
      targetPort: http
